# terminail

./: .gitignore  .vscodeignore  LICENSE  README.md  config.yaml  jest.config.js  package-lock.json  package.json  playwright.config.js  tsconfig.json  tsconfig.production.json
container/: .gitignore  Containerfile  README.md  TestContainerfile  config.yaml  pyproject.toml
container/doc/: CHECKLIST.md
container/mcp_server/: __init__.py  ai_handler_base.py  ai_handlers.py  ai_service.py  browser.py  chrome_manager.py  handler_factory.py  main.py  utils.py
container/mcp_server/handlers/: chatgpt_handler.py  claude_handler.py  copilot_handler.py  deepseek_handler.py  doubao_handler.py  ernie_handler.py  gemini_handler.py  grok_handler.py  huggingchat_handler.py  kimi_handler.py  leonardo_ai_handler.py  perplexity_handler.py  pi_handler.py  quark_handler.py  qwen_handler.py  tongyi_wanxiang_handler.py  wenxin_yiyan_handler.py  yuanbao_handler.py
container/scripts/: start_chrome_debug.bat  start_chrome_debug.sh
container/tests/: __init__.py  conftest.py  pytest.ini  run_tests.py
container/tests/e2e/: 00_install_terminai_extension.py  00_install_terminail_extension.py  01_check_podman_installation.py  02_check_chrome_installation.py  03_check_container_installation.py  04_start_podman.py  05_start_chrome.py  06_start_container.py  07_verify_prerequisites.py  08_send_cd_deepseek_command.py  09_send_qi_deepseek_command.py  10_confirm_e2e_success.py  11_send_ls_command.py  README.md  __init__.py  architecture_diagram.py  chrome_debug_port_test.py  debug_deepseek.py  (+33 more)
(+162 files in other folders)
